--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,11 @@
 baseURL: http://www.jessekrijthe.com/
 disablePathToLower: true
-ignoreFiles: ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+ignoreFiles:
+  - \.Rmd$
+  - \.Rmarkdown$
+  - _cache$
+  - \.knit\.md$
+  - \.utf8\.md$
 languageCode: en-us
 title: Jesse Krijthe
 buildDrafts: false
@@ -11,6 +16,9 @@ author:
 permalinks:
   articles: /articles/:filename
 taxonomies:
-  tag: "tags"
   category: "categories"
-  series: "series"
+
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
