--- a/data/papers.yml
+++ b/data/papers.yml
@@ -5,7 +5,7 @@ entries:
   doi: "10.1002/mds.28339"
   code: "https://github.com/jkrijthe/pdmed"
 - title: "Density of Patient-Sharing Networks: Impact on the Value of Parkinson Care"
-  authors: "Vlaanderen, F., de Man, Y., Tanke, M., Munneke, M., Atsma, F., Meinders, M., Jeurissen, P., Bloem, B., Krijthe, J., Groenewoud, S." 
+  authors: "Vlaanderen, F., de Man, Y., Tanke, M., Munneke, M., Atsma, F., Meinders, M., Jeurissen, P., Bloem, B., Krijthe, J.H., Groenewoud, S." 
   venue: "International Journal of Health Policy and Management, in press (2021)"
   pdf: "https://www.ijhpm.com/article_4015_9db51de5fa807448522b8d5e039b78c2.pdf"
 - title: "A brief prehistory of double descent"
